Remove ignored files from repo

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,20 @@ logs/
 data/
 *.csv
 *.json
+
+**/node_modules/
+
+.airflow/airflow.db
+.airflow/airflow.db-shm
+.airflow/airflow.db-wal
+backend/__pycache__/
+frontend/node_modules/
+frontend/dist/
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+.env
+.env.*
+hrp.db
+uv.lock
