--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,5 @@ dependencies = [
     "apache-airflow==3.0.4",
     "apache-airflow-providers-fab>=2.3.1",
     "flask-appbuilder>=4.6.3",
-    "pandas>=2.1.4",
+    "ipykernel>=7.0.1",
 ]
